--- a/src/Main/JournalEntry/ProjectEntry/ProjectEntry.module.scss
+++ b/src/Main/JournalEntry/ProjectEntry/ProjectEntry.module.scss
@@ -12,25 +12,24 @@
     .ColMain {
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
         // background-color: #fff;
-        height: 100%;
+        max-height: 100%;
 
         .Categories {
-            display: grid;
             padding-right: 20px;
-            background-color: #c5ccd0;
-            border-radius: 3.5px;
+            background-color: #e7eaf0;
+            border-radius: 2.5px;
             display: grid;
             grid-template-columns: 1fr 16fr 2fr 2fr;
             padding: 5px 8px;
             font-family: $dm;
             font-weight: 600;
             font-size: 12.5px;
-            margin-bottom: 20px;
+            margin-bottom: 15px;
         }
         .TasksContainer {
-            height: 100%;
+            // height: 100%;
+            overflow: hidden;
         }
     }
     .ColSecondary {
