--- a/src/Main/CreateProjectForm/CreateProjectForm.module.scss
+++ b/src/Main/CreateProjectForm/CreateProjectForm.module.scss
@@ -34,7 +34,7 @@
         grid-template-columns: 1fr 1fr;
         gap: 50px;
 
-        button {
+        .AddRepoButton {
             border: 0.5px solid grey;
             border-radius: 3px;
             font-family: $gt;
