--- a/src/Main/CreateProjectForm/CreateProjectForm.module.scss
+++ b/src/Main/CreateProjectForm/CreateProjectForm.module.scss
@@ -2,6 +2,7 @@
 
 .FormContainer {
     width: 800px;
+    min-height: 650px;
     background-color: #f8fafa;
     padding: 50px 80px 55px 80px;
     border-radius: 8px;
@@ -11,6 +12,12 @@
     font-family: $po;
     font-family: $sa;
     font-family: $gt;
+
+    button {
+        outline: none;
+        border: none;
+        background: none;
+    }
 
     h1 {
         margin: 0;
@@ -56,6 +63,20 @@
                 margin-right: 5px;
                 margin-left: 7px;
             }
+        }
+        .RemoveGithubInputFieldButton {
+            height: 25px;
+            width: 25px;
+            border-radius: 2px;
+
+            svg {
+                color: rgb(191, 196, 199);
+                color: rgb(47, 47, 49);
+                transition: background-color 0.2s;
+            }
+        }
+        .RemoveGithubInputFieldButton:hover {
+            background: rgb(231, 234, 236);
         }
 
         label {
