--- a/src/Main/CreateProjectForm/CreateProjectForm.module.scss
+++ b/src/Main/CreateProjectForm/CreateProjectForm.module.scss
@@ -8,10 +8,38 @@
     border-radius: 8px;
     box-shadow: 0 4px 12px 0 rgba(199, 205, 216, 0.5);
     border: 0.2px solid #1869ffbb;
+    position: relative;
 
     font-family: $po;
     font-family: $sa;
     font-family: $gt;
+
+    .CheckmarkContainer {
+        width: 100%;
+        height: 400px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        p {
+            font-family: $dm;
+            font-size: 18px;
+            text-align: center;
+            margin-top: 20px;
+            color: #2d9fe6;
+        }
+    }
+    .SpinnerContainerLarge {
+        height: calc(100% - 105px);
+        width: calc(100% - 160px);
+        background-color: rgba(255, 255, 255, 0.85);
+        position: absolute;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        z-index: 1001;
+    }
 
     button {
         outline: none;
@@ -169,8 +197,8 @@
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                padding-bottom: 50px;
-                padding-right: 50px;
+                padding-bottom: 20px;
+                padding-right: 20px;
             }
             .PreviewContainer {
                 height: 120px;
@@ -215,6 +243,7 @@
         }
         .CreateButton {
             text-align: center;
+
             input[type="submit"] {
                 background-color: #3180ee;
                 border: none;
@@ -224,43 +253,12 @@
                 padding: 7px 60px;
                 border-radius: 3px;
                 margin: 0 auto;
-            }
-        }
-    }
+                outline: none;
+                cursor: pointer;
 
-    .LoadingRing {
-        display: inline-block;
-        position: relative;
-        width: 80px;
-        height: 80px;
-
-        div {
-            box-sizing: border-box;
-            display: block;
-            position: absolute;
-            width: 55px;
-            height: 55px;
-            margin: 8px;
-            border: 4px solid #1cb6ee;
-            border-radius: 50%;
-            animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-            border-color: #1cb6ee transparent transparent transparent;
-        }
-        div:nth-child(1) {
-            animation-delay: -0.45s;
-        }
-        div:nth-child(2) {
-            animation-delay: -0.3s;
-        }
-        div:nth-child(3) {
-            animation-delay: -0.15s;
-        }
-        @keyframes lds-ring {
-            0% {
-                transform: rotate(0deg);
-            }
-            100% {
-                transform: rotate(360deg);
+                &:hover {
+                    background-color: #5e9ef7;
+                }
             }
         }
     }
