--- a/src/UI/LoadingSpinner.module.scss
+++ b/src/UI/LoadingSpinner.module.scss
@@ -1,20 +1,19 @@
 .LoadingRing {
     display: inline-block;
     position: relative;
-    width: 80px;
-    height: 80px;
 
     div {
         box-sizing: border-box;
         display: block;
         position: absolute;
-        width: 55px;
-        height: 55px;
+        // width: 55px;
+        // height: 55px;
         margin: 8px;
-        border: 4px solid #1cb6ee;
+        // border: 4px solid #1cb6ee;
         border-radius: 50%;
         animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-        border-color: #1cb6ee transparent transparent transparent;
+        // border-color: #1cb6ee transparent transparent transparent;
+        z-index: 1002;
     }
     div:nth-child(1) {
         animation-delay: -0.45s;
