--- a/src/Main/Welcome/Welcome.module.scss
+++ b/src/Main/Welcome/Welcome.module.scss
@@ -2,7 +2,7 @@
 
 .WelcomeWrapper {
     height: 100vh;
-    padding: 3.5% 10%;
+    padding: 3.5% 8%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -15,7 +15,7 @@
 
     .Welcome {
         width: 100%;
-        padding-right: 9.1%;
+        padding-right: 8%;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -31,11 +31,11 @@
         }
         .Heading {
             text-align: center;
-            margin-top: 20%;
+            margin-top: 17%;
             h1 {
                 font-family: $dm;
                 font-size: 35px;
-                font-weight: 600;
+                // font-weight: 600;
                 text-align: center;
                 line-height: 35px;
             }
@@ -43,15 +43,43 @@
         .Line {
             margin-top: 6%;
         }
+        .AddProject {
+            margin-top: 15px;
+            padding: 5px 10px;
+            font-family: $gt;
+            cursor: pointer;
+            border-radius: 3px;
+            border: 0.5px solid #35a9f1;
+            background: white;
+            transition: background 0.2s linear;
+            outline: none;
+
+            &:hover {
+                background-color: #35a9f1;
+                transition: background 0.2s linear;
+            }
+        }
     }
 
     .ChevIcon {
         position: absolute;
         bottom: 4%;
-        left: 45%;
-    }
-    .ChevIcon:hover {
-        background-color: #6c767c;
-        transition: background-color 0.3s linear;
+        left: 45.6%;
+
+        svg {
+            margin: 0;
+            width: 30px;
+            height: 30px;
+            padding: 4px;
+            border-radius: 50%;
+            background-color: rgb(80, 81, 81);
+            padding-top: 6px;
+            transition: background-color 0.3s linear;
+
+            &:hover {
+                background-color: black;
+                transition: background-color 0.3s linear;
+            }
+        }
     }
 }
