--- a/src/Main/Projects/Projects.module.scss
+++ b/src/Main/Projects/Projects.module.scss
@@ -126,6 +126,7 @@
                     margin-top: 15px;
                     padding: 4px 10px;
                     width: 130px;
+                    height: 32px;
                     font-family: $gt;
                     cursor: pointer;
                     border-radius: 5px;
