--- a/src/Main/Projects/Projects.module.scss
+++ b/src/Main/Projects/Projects.module.scss
@@ -41,8 +41,8 @@
 
             .ChevIcon {
                 position: absolute;
-                bottom: 4%;
-                left: 45.6%;
+                bottom: 50%;
+                transform: translateY(50%);
 
                 svg {
                     transform: rotate(90deg);
@@ -61,23 +61,59 @@
                     }
                 }
             }
+            #Left {
+                left: -70px;
+            }
+            #Right {
+                right: -70px;
+                svg {
+                    transform: rotate(270deg);
+                }
+            }
 
             .ProjectCircle {
                 background-color: white;
                 width: 130px;
                 height: 130px;
-                margin: 20px 25px;
+                margin: 0 25px;
                 border-radius: 50%;
+                cursor: pointer;
+                padding: 30px;
+                padding-top: 40px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+
+                img {
+                    height: 50%;
+                    object-fit: contain;
+                }
             }
         }
         .ProjectDetails {
-            .LogoContainer {
-                height: 50px;
-                overflow: hidden;
+            .ProjectTitle {
+                height: 120px;
+                display: flex;
+                align-items: flex-end;
+                padding-bottom: 20px;
 
-                img {
-                    height: 100%;
-                    object-fit: contain;
+                .LogoContainer,
+                .LogoContainerHorizontal {
+                    display: flex;
+                    justify-content: baseline;
+                    height: 80px;
+                    overflow: hidden;
+
+                    img {
+                        height: 100%;
+                        object-fit: contain;
+                    }
+                }
+                .LogoContainer {
+                    height: 50px;
+                }
+                .LogoContainerHorizontal {
+                    height: 100px;
                 }
             }
             .Description {
