--- a/src/Main/Projects/Projects.module.scss
+++ b/src/Main/Projects/Projects.module.scss
@@ -5,6 +5,7 @@
     width: 100vw;
     padding: 3.5% 8%;
     background-color: rgb(242, 245, 247);
+    background-color: rgb(221, 225, 228);
     margin: 0;
     display: flex;
     flex-direction: column;
