--- a/src/Menu/Menu.module.scss
+++ b/src/Menu/Menu.module.scss
@@ -10,43 +10,56 @@
     padding-top: 3.8%;
     padding-right: 3.5vw;
     text-align: right;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
 
-    a {
-        font-family: $sa;
-        font-family: $po;
-        letter-spacing: 0.5px;
-        font-size: 12px;
-        color: $fc-primary-l;
-    }
-
-    .Timeline {
+    .Cont {
         display: flex;
         flex-direction: column;
-        align-items: right;
-        color: rgba(92, 92, 92, 0.61);
-        font-family: "DM Sans";
-        ul {
-            list-style: none;
+        justify-content: flex-start;
+        height: 100%;
+        position: relative;
+
+        .VerticalLine {
+            height: 100%;
+            position: absolute;
+            top: 0;
+            right: -30px;
         }
 
-        li {
-            text-align: right;
-            cursor: pointer;
+        a {
+            font-family: $sa;
+            font-family: $po;
+            letter-spacing: 0.5px;
+            font-size: 12px;
+            color: $fc-primary-l;
+            border-right: 2px solid red;
+        }
 
-            a {
-                font-size: 12px;
+        .Timeline {
+            display: flex;
+            flex-direction: column;
+            align-items: right;
+            color: rgba(92, 92, 92, 0.61);
+            font-family: "DM Sans";
+            ul {
+                list-style: none;
+            }
+
+            li {
+                text-align: right;
+                cursor: pointer;
+
+                a {
+                    font-size: 12px;
+                }
+            }
+            .Timeline h3 {
+                margin: 3px 0;
             }
         }
-        .Timeline h3 {
-            margin: 3px 0;
+        .Count {
+            font-family: "DM Sans";
+            font-size: 10px;
+            margin-top: auto;
         }
-    }
-    .Count {
-        font-family: "DM Sans";
-        font-size: 10px;
-        margin-top: auto;
     }
 }
