--- a/src/Main/FORMS/CreateJournalEntryForm/CreateJournalEntryForm.module.scss
+++ b/src/Main/FORMS/CreateJournalEntryForm/CreateJournalEntryForm.module.scss
@@ -53,26 +53,26 @@
         }
         ul {
             list-style: none;
+            max-height: 140px;
+            overflow-y: auto;
 
             li {
                 position: relative;
-                height: 30px;
-                margin: 8px 0;
+                // margin: 2px 0;
 
-                label {
-                    border-radius: 3px;
+                input[type="radio"] {
+                    visibility: hidden;
                     position: absolute;
-                    top: 5px;
-                    left: 0;
-                    width: 100%;
-                    height: 100%;
-                    font-weight: 400;
-                    font-size: 15px;
-                    background-color: white;
-                    border: 0.5px solid rgb(198, 202, 208);
-                    cursor: pointer;
-                    transition: all 0.2s linear;
+                }
+
+                .SelectProject + label {
+                    margin-bottom: 5px;
                     text-align: center;
+                    height: 100%;
+                    padding: 5px;
+                    border-radius: 3px;
+                    cursor: pointer;
+                    border: 0.5px solid rgb(198, 202, 208);
 
                     &:hover {
                         box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px,
@@ -83,12 +83,10 @@
                         border-color: #5cbbff;
                     }
                 }
-                input[type="radio"] {
-                    // display: none;
-                }
-                input[type="radio"]:checked + label {
+                .SelectProject:checked + label {
                     background-color: #35a9f1;
                     color: white;
+                    font-weight: 400;
                 }
             }
         }
