--- a/src/Main/FORMS/CreateJournalEntryForm/CreateJournalEntryForm.module.scss
+++ b/src/Main/FORMS/CreateJournalEntryForm/CreateJournalEntryForm.module.scss
@@ -49,9 +49,9 @@
 
         h3 {
             font-size: 13px;
-            margin-bottom: 10px;
         }
         ul {
+            margin-top: 10px;
             list-style: none;
             max-height: 140px;
             overflow-y: auto;
@@ -73,6 +73,7 @@
                     border-radius: 3px;
                     cursor: pointer;
                     border: 0.5px solid rgb(198, 202, 208);
+                    background-color: white;
 
                     &:hover {
                         box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px,
