--- a/src/Main/Welcome/Card/Card.module.scss
+++ b/src/Main/Welcome/Card/Card.module.scss
@@ -1,23 +1,39 @@
 @import "variables.scss";
 
-.Card {
-    font-family: "Lora";
-    h4 {
-        font-family: "Poppins";
-        font-family: $gt;
-        font-family: $sa;
-        // font-weight: 500;
-        text-transform: uppercase;
-        letter-spacing: 1.2px;
-        color: $blue-l;
-    }
-    .L {
-        height: 4px;
-        border-radius: 1px;
-        width: 50px;
-        background-color: $blue-l;
-        // margin: 0 auto;
-        margin-top: 4px;
-        margin-bottom: 10px;
+.CardWrapper {
+    display: flex;
+    .Card {
+        h4 {
+            font-family: "Poppins";
+            font-family: $gt;
+            font-family: $sa;
+            // font-weight: 500;
+            text-transform: uppercase;
+            letter-spacing: 1.2px;
+            color: $blue-l;
+            color: $fc-secondary-l;
+        }
+        .L {
+            height: 4px;
+            border-radius: 1px;
+            width: 30px;
+            background-color: $fc-secondary-l;
+            background-color: $blue-l;
+            // margin: 0 auto;
+            margin-top: 4px;
+            margin-bottom: 10px;
+        }
+        p {
+            font-family: $dm;
+            margin-bottom: 10px;
+
+            span {
+                color: #1869ff;
+                font-family: $gt;
+                font-size: 14px;
+                font-weight: 700;
+                margin-right: 5px;
+            }
+        }
     }
 }
