--- a/src/Main/FORMS/CreateProjectForm/CreateProjectForm.module.scss
+++ b/src/Main/FORMS/CreateProjectForm/CreateProjectForm.module.scss
@@ -139,15 +139,19 @@
             height: 25px;
             width: 25px;
             border-radius: 2px;
+            margin-top: 2px;
 
             svg {
-                color: rgb(191, 196, 199);
+                width: auto;
+                margin: 0;
+                margin-left: 4px;
                 color: rgb(47, 47, 49);
                 transition: background-color 0.2s;
             }
         }
         .RemoveGithubInputFieldButton:hover {
-            background: rgb(231, 234, 236);
+            background-color: rgb(231, 234, 236);
+            box-shadow: none;
         }
 
         label {
