--- a/src/variables.scss
+++ b/src/variables.scss
@@ -9,7 +9,9 @@ $line-primary-l: #dae0e8;
 $blue-l: #1869ff;
 // 2. Dark Mode
 // 2.1 background color bcg-primary-d
+$bcg-primary-d: #1e2023;
 // 2.2 background color bcg-secondary-d
+$blue-d: #35a9f1;
 
 // ---------------------------------------- FONTS
 $gt: "GT Walsheim Pro";
@@ -23,3 +25,4 @@ $po: "Poppins";
 // ---------------------------------------- FONT-COLORS
 $fc-primary-l: #6c767c;
 $fc-secondary-l: #031b4e;
+$fc-primary-d: #dae0e8;
