--- a/src/Main/Welcome/Welcome.module.scss
+++ b/src/Main/Welcome/Welcome.module.scss
@@ -7,7 +7,6 @@
     flex-direction: column;
     align-items: center;
     width: 100vw;
-    // background-color: $bcg-primary-l;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -19,7 +18,6 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        // background-color: beige;
         cursor: context-menu;
 
         .Greeting {
@@ -30,11 +28,10 @@
             align-self: flex-start;
             text-align: left;
         }
+
         .Heading {
             margin-top: 7%;
             display: flex;
-            // align-items: flex-end;
-            // justify-content: flex-end;
 
             .WelcomeMessage {
                 font-family: $po;
@@ -43,7 +40,6 @@
                     color: $fc-secondary-l;
 
                     span {
-                        // color: #1869ff;
                         font-weight: 600;
                     }
                 }
@@ -134,6 +130,68 @@
             &:hover {
                 border-color: #1869ff;
                 transition: border-color 0.2s linear;
+            }
+        }
+    }
+}
+.DarkMode {
+    .Welcome {
+        .Greeting {
+            color: $fc-primary-d;
+            font-weight: 300;
+            letter-spacing: 0.6px;
+        }
+
+        .Heading {
+            .WelcomeMessage {
+                h1 {
+                    color: $fc-primary-d;
+                    font-weight: 200;
+
+                    span {
+                        font-weight: 500;
+                    }
+                }
+                h4 {
+                    color: #5b6367;
+                }
+            }
+            .ProfilePic {
+                border-color: $fc-secondary-l;
+            }
+        }
+        .CardsContainer {
+            p.Instructions {
+                font-weight: 500;
+                color: #bbc2c7;
+            }
+            .AddProject {
+                background-color: #252a30;
+                border-color: black;
+                box-shadow: 3px 3px 1px black;
+                color: #9aa0a9;
+
+                svg {
+                    fill: #9aa0a9;
+                }
+                &:hover {
+                    color: $blue-d;
+                    border-color: #35a9f1a3;
+                    transition: all 0.2s linear;
+
+                    svg {
+                        fill: $blue-d;
+                    }
+                }
+            }
+        }
+    }
+    .ChevIcon {
+        svg {
+            border-color: black;
+
+            &:hover {
+                border-color: #35a9f1a3;
             }
         }
     }
