--- a/src/Menu/Menu.module.scss
+++ b/src/Menu/Menu.module.scss
@@ -22,7 +22,7 @@
             height: 100%;
             position: absolute;
             top: 0;
-            right: -20px;
+            right: -19px;
 
             &::before {
                 content: "";
@@ -31,7 +31,7 @@
                 position: absolute;
                 background-color: rgb(25, 26, 29);
                 bottom: 0;
-                right: -1px;
+                right: -2px;
             }
         }
         #FirstLink {
@@ -127,6 +127,61 @@
             font-size: 10px;
             margin-top: auto;
             margin-bottom: 28px;
+        }
+    }
+    .DarkMode {
+        .VerticalLine {
+            &::before {
+                background-color: #dae0e8;
+            }
+        }
+        .TimelineLink {
+            .Active {
+                font-weight: 500;
+                color: $blue-l;
+            }
+            .Active::before {
+                background-color: $blue-l;
+            }
+
+            a {
+                font-weight: 200;
+                color: $line-primary-l;
+
+                &:hover {
+                    color: $blue-l;
+                }
+            }
+        }
+        .Timeline {
+            ul {
+                li {
+                    .Active {
+                        color: #f7f9f9;
+                    }
+                    .Active::before {
+                        background-color: $blue-l;
+                    }
+                    div {
+                        color: #a0a7a7;
+                        font-weight: 300;
+
+                        a {
+                            font-weight: 300;
+                            color: #f7f9f9;
+
+                            &:hover {
+                                color: $blue-l;
+                                transition: color 0.1s linear;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+
+        .Count {
+            color: #dae0e8;
         }
     }
 }
