--- a/src/Main/FORMS/PasswordModalForm/PasswordModalForm.module.scss
+++ b/src/Main/FORMS/PasswordModalForm/PasswordModalForm.module.scss
@@ -5,11 +5,49 @@
     width: 280px;
     background-color: #fff;
     border-radius: 5px;
-    border: 0.8px solid rgb(226, 62, 62);
+    border: 0.8px solid #e23e3e;
     padding: 15px;
     font-family: $dm;
     box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px,
         rgba(0, 0, 0, 0.05) 0px 1px 4px 0px, rgba(0, 0, 0, 0.05) 0px 2px 8px 0px;
+    position: relative;
+
+    .LoadingSpinnerContainer,
+    .CheckmarkContainer {
+        position: absolute;
+        top: 1%;
+        left: 1%;
+        width: 98%;
+        height: 98%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        display: flex;
+        flex-direction: column;
+    }
+    .LoadingSpinnerContainer {
+        background-color: rgba(255, 255, 255, 0.878);
+        padding-bottom: 20px;
+        padding-right: 15px;
+    }
+    .CheckmarkContainer {
+        background-color: rgb(255, 255, 255);
+        padding-bottom: 30px;
+        padding-right: 10px;
+        p {
+            color: #fc7284;
+            font-size: 14px;
+            font-weight: 500;
+            font-family: $sa;
+            margin-top: 20px;
+        }
+    }
+    h1 {
+        font-size: 16px;
+        font-weight: 500;
+        color: #eb334c;
+        margin-bottom: 10px;
+    }
 
     h2 {
         font-size: 12px;
