--- a/src/Main/Main.module.scss
+++ b/src/Main/Main.module.scss
@@ -6,9 +6,20 @@
     background-color: $bcg-primary-l;
     transition: background-color 0.3s linear;
 
+    .DarkModeButtonWrapper,
+    .LineContainer {
+        position: fixed;
+        margin-top: 3%;
+        z-index: 100;
+    }
+    .DarkModeButtonWrapper {
+        right: 16.2%;
+    }
+
     &.DarkMode {
         transition: background-color 0.2s linear;
         background-color: $bcg-primary-d;
+        background-color: #16161d;
     }
 
     .ProjectFormContainer {
