--- a/src/Main/JournalEntries/JournalEntry/JournalEntry.module.scss
+++ b/src/Main/JournalEntries/JournalEntry/JournalEntry.module.scss
@@ -21,7 +21,7 @@
 
         .Greeting {
             margin-top: -10px;
-            font-family: $sa-l;
+            font-family: $gt;
             color: $fc-secondary-l;
             font-size: 14px;
             align-self: flex-start;
