--- a/src/Main/JournalEntries/JournalEntry/ProjectEntry/ProjectEntry.module.scss
+++ b/src/Main/JournalEntries/JournalEntry/ProjectEntry/ProjectEntry.module.scss
@@ -38,7 +38,7 @@
 
         .Categories {
             padding-right: 20px;
-            background-color: #e7eaf0;
+            background-color: #d9dde4;
             border-radius: 2.5px;
             display: grid;
             grid-template-columns: 1fr 16fr 2fr 2fr;
