--- a/src/Main/FORMS/PasswordModalForm/PasswordModalForm.module.scss
+++ b/src/Main/FORMS/PasswordModalForm/PasswordModalForm.module.scss
@@ -11,6 +11,7 @@
     box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px,
         rgba(0, 0, 0, 0.05) 0px 1px 4px 0px, rgba(0, 0, 0, 0.05) 0px 2px 8px 0px;
     position: relative;
+    z-index: 100;
 
     .LoadingSpinnerContainer,
     .CheckmarkContainer {
