--- a/src/Main/Projects/Projects.module.scss
+++ b/src/Main/Projects/Projects.module.scss
@@ -4,8 +4,8 @@
     height: 100vh;
     width: 100vw;
     padding: 3.5% 8%;
-    background-color: rgb(242, 245, 247);
-    background-color: rgb(231, 235, 238);
+    // background-color: rgb(242, 245, 247);
+    background-color: rgb(222, 227, 231);
     margin: 0;
     display: flex;
     flex-direction: column;
@@ -15,17 +15,38 @@
     justify-content: space-between;
     position: relative;
 
+    .ChevIcon {
+        position: absolute;
+        bottom: 4%;
+        left: 47%;
+
+        svg {
+            margin: 0;
+            width: 30px;
+            height: 30px;
+            padding: 4px;
+            border-radius: 50%;
+            padding-top: 6px;
+            transition: border-color 0.2s linear;
+            border: 1px solid white;
+
+            &:hover {
+                border-color: #1869ff;
+                transition: border-color 0.2s linear;
+            }
+        }
+    }
+
     .Projects {
         width: 100%;
         padding-right: 8%;
         display: flex;
         flex-direction: column;
         align-items: center;
-        // background-color: beige;
 
         .Greeting {
             margin-top: -10px;
-            font-family: $sa-l;
+            font-family: $gt;
             color: $fc-secondary-l;
             font-size: 14px;
             align-self: flex-start;
@@ -34,7 +55,7 @@
         .Heading {
             text-align: center;
             margin-top: 7%;
-            margin-bottom: 30px;
+            margin-bottom: 2%;
             display: flex;
             width: 100%;
             // background-color: rgb(164, 204, 164);
@@ -73,10 +94,9 @@
             }
 
             .ProjectCircle {
-                background-color: white;
                 width: 130px;
                 height: 130px;
-                margin: 0 25px;
+                margin: 0 30px;
                 border-radius: 50%;
                 cursor: pointer;
                 padding: 30px;
@@ -84,19 +104,45 @@
                 display: flex;
                 justify-content: center;
                 align-items: center;
+                transition: border-color 0.3 linear;
+                transition: all 0.3s ease-out;
+
+                &:hover img {
+                    transition: all 0.3s ease-in-out;
+                    -webkit-filter: grayscale(0%);
+                    filter: grayscale(0%);
+                }
 
                 img {
                     height: 50%;
                     object-fit: contain;
+                    -webkit-filter: grayscale(100%);
+                    filter: grayscale(100%);
+                }
+            }
+            #sinkplant {
+                margin-top: -21px;
+                img {
+                    height: 116%;
+                }
+            }
+            #nap {
+                margin-right: 40px;
+            }
+            #portfolio {
+                margin-top: -11px;
+                margin-right: 0;
+                img {
+                    height: 54%;
                 }
             }
         }
         .ProjectDetails {
             .ProjectTitle {
-                height: 120px;
+                height: 115px;
                 display: flex;
                 align-items: flex-end;
-                padding-bottom: 20px;
+                // padding-bottom: 10px;
 
                 .EditDeleteProject {
                     position: relative;
@@ -110,10 +156,14 @@
                         height: 25px;
                         border-radius: 3px;
                         cursor: pointer;
+                        border: 0.1px solid white;
+                        background-color: #fff;
+                        margin-right: 10px;
 
                         &:hover {
-                            background-color: #fff;
-                            transition: background-color 0.1s linear;
+                            color: #1869ff;
+                            border-color: #1869ff;
+                            transition: all 0.1s linear;
                         }
 
                         svg {
@@ -148,98 +198,127 @@
                 }
             }
             .Description {
+                margin-top: 20px;
                 font-family: $gt;
                 p {
                     font-size: 14px;
                 }
             }
-            .LastUpdated {
-                font-family: $gt;
-                font-weight: 500;
-                font-size: 12px;
-                display: flex;
-                justify-content: space-between;
-                margin-bottom: 3px;
-            }
-            h6 {
-                font-family: $dm;
-                font-weight: 600;
-                font-size: 13px;
-                margin-top: 10px;
-            }
-            .IconsWrapper {
-                display: flex;
-                max-width: 100%;
-                flex-wrap: wrap;
-                margin-top: 10px;
-                justify-content: space-between;
+            .SecondColumn {
+                position: relative;
 
-                span {
-                    padding: 0;
-                    font-size: 34px;
-                    margin-right: 10px;
-                    margin-bottom: 12px;
-
-                    svg {
-                        margin: 0;
-                        padding: 0;
-                        width: auto;
-                    }
+                &:hover .Border {
+                    border-color: snow;
+                    transition: border-color 0.2s linear;
                 }
-            }
-            .ProjectButtons {
-                display: flex;
-                justify-content: space-between;
 
-                .StandardButton {
-                    outline: none;
-                    margin-top: 15px;
-                    padding: 4px 10px;
-                    width: 130px;
-                    height: 32px;
-                    font-family: $gt;
-                    cursor: pointer;
+                .Border {
+                    position: absolute;
+                    left: -10%;
+                    top: 70px;
+                    width: 120%;
+                    min-height: 320px;
+                    border: 1px solid rgba(255, 255, 255, 0);
                     border-radius: 5px;
-                    border: 1.5px solid #28292a;
-                    background: white;
-                    transition: background 0.2s linear;
-                    box-shadow: 3px 3px 1px #1869ff;
+                }
+                .LastUpdated {
+                    font-family: $gt;
+                    font-weight: 500;
+                    font-size: 12px;
+                    display: flex;
+                    justify-content: space-between;
+                    margin-bottom: 3px;
+                }
+                h6 {
+                    font-family: $dm;
+                    font-weight: 600;
+                    font-size: 13px;
+                    margin-top: 10px;
+                }
+
+                .IconsWrapper {
+                    display: flex;
+                    max-width: 100%;
+                    flex-wrap: wrap;
+                    margin-top: 10px;
+                    justify-content: space-between;
 
                     span {
-                        display: flex;
-                        justify-content: space-between;
-                        align-items: center;
+                        padding: 0;
+                        font-size: 34px;
+                        margin-right: 10px;
+                        margin-bottom: 12px;
 
                         svg {
-                            font-size: 18px;
-                            margin: 0 0 1px 5px;
+                            margin: 0;
+                            padding: 0;
                             width: auto;
                         }
                     }
+                }
+                .ProjectButtons {
+                    display: flex;
+                    justify-content: space-between;
 
-                    &:hover {
-                        color: #1869ff;
-                        border-color: #1869ff;
-                        transition: all 0.2s linear;
+                    .StandardButton {
+                        z-index: 100;
+                        outline: none;
+                        margin-top: 15px;
+                        padding: 2px 5px;
+                        width: 115px;
+                        height: 30px;
+                        font-family: $gt;
+                        cursor: pointer;
+                        border-radius: 5px;
+                        border: 1.5px solid #28292a;
+                        background: white;
+                        transition: background 0.2s linear;
+                        box-shadow: 3px 3px 1px #1869ff;
+
+                        span {
+                            display: flex;
+                            justify-content: space-between;
+                            align-items: center;
+
+                            svg {
+                                font-size: 18px;
+                                width: auto;
+                            }
+                        }
+
+                        &:hover {
+                            color: #1869ff;
+                            border-color: #1869ff;
+                            transition: all 0.2s linear;
+                        }
                     }
                 }
             }
         }
+
         .NoProjectsMessage {
+            margin-left: 18px;
+            margin-top: 15%;
             height: 100%;
-            font-family: $gt;
+            font-family: $dm;
             font-weight: 600;
             color: rgba(158, 162, 162, 0.5);
-            font-size: 50px;
+            font-size: 40px;
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
+
+            svg {
+                margin-top: 30px;
+            }
         }
     }
 }
 
 .DarkMode {
     background-color: #1a1c20;
+    background-color: #0f0f16;
     .Projects {
         .Greeting {
             color: $fc-primary-d;
